--- a/trunk/nrg/Project/SmartDeviceApplication/SmartDeviceApplication/SmartDeviceApplication.csproj
+++ b/trunk/nrg/Project/SmartDeviceApplication/SmartDeviceApplication/SmartDeviceApplication.csproj
@@ -52,12 +52,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChatForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ChatForm.Designer.cs">
-      <DependentUpon>ChatForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="MessageApplicationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +75,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RouterTableClass.cs" />
     <Compile Include="UtilityConfFile.cs" />
   </ItemGroup>
   <ItemGroup>
